# Ravager

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.heroku  LICENSE  README.md  app.json  docker-compose-local.yml  docker-compose.yml  healthcheck.sh  heroku.yml  pyproject.toml  start.sh
.github/workflows/: build-with-cache.yaml  build-without-cache.yaml
ravager/: __init__.py  __main__.py  config.py  db_test_snippets.py  debug.env  housekeeping.py  main.py  ravager.db  test_snippets.py
ravager/bot/commands/: abort.py  add_drive.py  admin_interface.py  download.py  error.py  help.py  reply.py  revoke.py  start.py  unknown.py  upload.py
ravager/bot/helpers/: abort_upload_handler.py  constants.py  timeout.py  validators.py
ravager/celery_tasks/: tasks.py
ravager/database/: __init__.py  admin.py  connection.py  table.py  tasks.py  users.py
ravager/database/helpers/: setup_db.py  structs.py
ravager/helpers/: check_process.py  custom_exceptions.py  heroku.py  humanize.py  to_magnet.py
ravager/services/aria/: __init__.py  download.py  handler.py  updater.py
ravager/services/google/: upload.py
ravager/services/google/helpers/: controller.py  uploader.py
ravager/services/mega/: main.py
ravager/services/mega/helpers/: errors.py  proxy_sentinel.py
