[tool.poetry]
name = "ravager"
version = "0.1.0"
description = "A bot that sails the high seas and brings treasures from the land unknown"
authors = ["Aseem Manna coolfool149@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^12.7"
python-dotenv = "^0.13.0"
requests = "^2.23.0"
tenacity = "^6.2.0"
proxybroker = {git = "https://github.com/bluet/proxybroker2.git"}
heroku3 = "^4.2.1"
pytz = "^2020.1"
pexpect = "^4.8.0"
psutil = "^5.7.0"
SQLAlchemy = "^1.3.17"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
